fix layout bug

--- a/src/pages/mine/index.less
+++ b/src/pages/mine/index.less
@@ -138,6 +138,7 @@
   }
 
   .recommend-box {
+    width: 100%;
     .title {
       font-size: 32rpx;
       font-family: PingFangSC-bold;
@@ -171,10 +172,10 @@
     .content-box {
       display: flex;
       flex-wrap: wrap;
-      margin-left: 18rpx;
+      margin-left: 8rpx;
 
       .box {
-        padding: 14rpx 24rpx 14rpx 16rpx;
+        padding: 14rpx 24rpx 14rpx 18rpx;
         background-color: #fff;
         margin-bottom: 14rpx;
         .img {
